// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows anchor links 1`] = `
Object {
  "body": "<a href=\\"http://test.com\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">http://test.com</a>",
  "linkCount": 1,
}
`;

exports[`allows anchor tags and counts them correctly 1`] = `
"
    <div>
      <a href=\\"https://mozilla.org/\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">https://mozilla.org/</a>
      <a href=\\"https://mozilla.org/\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">https://mozilla.org/</a>
    </div>
  "
`;

exports[`allows mailto links 1`] = `
Object {
  "body": "<a href=\\"mailto:email@example.com\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">email@example.com</a>",
  "linkCount": 1,
}
`;

exports[`sanitizes out attributes not allowed 1`] = `
Object {
  "body": "<div>Test</div>",
  "linkCount": 0,
}
`;

exports[`sanitizes out tags not allowed 1`] = `
Object {
  "body": "",
  "linkCount": 0,
}
`;

exports[`sanitizes out tags not allowed 2`] = `
Object {
  "body": "",
  "linkCount": 0,
}
`;
